--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="utf-8">
     <title>Список покупок</title>
     <link rel="stylesheet" href="main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
-        Контейнер
+        <div class="container-head"></div>
+        <h1>To-Do list</h1>
     </div>
     <script src="script.js"></script>
 </body>
