--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <div class="container">
         <div class="container-head"></div>
         <h1>To-Do list</h1>
+        <div class="sort-button"></div>
+        <input type='text'>
+        <div class="add-button"><p>Добавить</p>
+            <div class="round">+</div>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
