--- a/index.html
+++ b/index.html
@@ -1,21 +1,30 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="utf-8">
     <title>Список покупок</title>
     <link rel="stylesheet" href="main.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <div class="container">
         <div class="container-head"></div>
         <h1>To-Do list</h1>
         <div class="sort-button"></div>
-        <input type='text'>
-        <div class="add-button"><p>Добавить</p>
+        <div class="input-container">
+            <input type='text'>
+            <div class='cancel'>X</div>
+        </div>
+        <div class="add-button">
+            <p>Добавить</p>
             <div class="round">+</div>
         </div>
+        <div class="rounds"></div>
+
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
