--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </svg>
         </div>
         <div class="parent-container">
-            <div class="input-container">
+            <div class="input-container" draggable="true">
                 <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="ellipsis-h" class="drag"
                     role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                     <path fill="currentColor"
